# Retail-Sales-Forecasting-Engine

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  dashboard.py  service.py
config/: config.yaml
docs/: DEPLOYMENT.md  METHODOLOGY.md  METRICS.md  MODELS.md  _config.yml  index.md
notebooks/: 01_exploratory_analysis.ipynb
scripts/: download_data.py  generate_report.py  run_benchmark.py
src/data/: __init__.py  build.py  dataset.py  m5.py  preprocessing.py  synthetic.py
src/evaluation/: __init__.py  metrics.py  plots.py  stratify.py
src/models/: __init__.py  base.py  chronos_bolt.py  croston.py  patchtst.py  registry.py  seasonal_naive.py
src/pipeline/: __init__.py  benchmark.py
src/utils/: __init__.py  config.py  logging.py  seed.py
tests/: test_data.py  test_metrics.py  test_models.py  test_pipeline.py  test_service.py
