[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-forecasting-engine"
version = "0.1.0"
description = "Benchmarking foundation models vs. supervised and classical baselines for retail demand forecasting on M5."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Madhvansh" }]
keywords = ["forecasting", "time-series", "m5", "chronos", "patchtst", "retail"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "torch>=2.1",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
foundation = ["chronos-forecasting>=1.4.0"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "streamlit>=1.32", "pydantic>=2.6"]
dev = ["pytest>=7.4", "ruff>=0.3"]

[project.scripts]
rfe-benchmark = "scripts.run_benchmark:main"
rfe-download = "scripts.download_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
